--- a/productos_tp3/package.json
+++ b/productos_tp3/package.json
@@ -67,6 +67,7 @@
     "passport-local": "~1.0.0",
     "passport-paypal-openidconnect": "~0.1.1",
     "passport-twitter": "~1.0.4",
+    "sentiment": "^4.0.0",
     "serve-favicon": "~2.4.2",
     "socket.io": "^1.7.3",
     "twit": "^2.2.5",
